# Bomerman_Unibo

./: Ai.cpp  CMakeLists.txt  README.md  README.txt  bombe.cpp  bomberman  compiler.sh  compiling.txt  finestre.cpp  finestre.h  impostazioni.cpp  impostazioni.h  inGame.cpp  lang.cpp  lang.h  leaderboard.cpp  leaderboard.txt  main  main.cpp  mapparandom.cpp  mapparandom.h  menu  menu.cpp  movimento.cpp  rand.cpp  rappresentazione.cpp  selezioni.cpp  selezioni.h
include/: Ai.h  finestre.h  impostazioni.h  inGame.h  lang.h  leaderboard.h  mapparandom.h  movimento.h  rappresentazione.h  selezioni.h
